tests/miniJava/neg/004849_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( static int [] java ) { return 0 ; } }
